--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cosmjs/stargate": "0.28.2",
     "@types/node": "20.9.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "cosmjs-types": "0.4.1",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@keplr-wallet/types": "0.11.51"
   }
 }
